# 311-forecast-system

./: .dockerignore  .gitignore  AGENTS.md  Makefile  README.md  SETUP_GUIDE.md  compose.yaml  update.py
backend/: .coverage  .env.example  Makefile  alembic.ini  backend.db  bootstrap-test.db  ci-cov-check.db  ci-test.db  debug-auth.db  pyproject.toml  pytest.ini  requirements.txt
backend/.venv-py311-backup/: pyvenv.cfg
backend/alembic/versions/: 006_evaluation_lifecycle.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  errors.py
backend/app/clients/: actual_demand_client.py  edmonton_311.py  forecast_history_client.py  geomet_client.py  issue_tracker_client.py  nager_date_client.py  notification_service.py  open_meteo_client.py  weather_client.py
backend/app/core/: auth.py  config.py  db.py  demand_comparison_observability.py  logging.py  metrics.py
backend/app/models/: __init__.py  alert_detail_models.py  auth_models.py  demand_comparison_models.py  evaluation_models.py  feedback_submission.py  forecast_accuracy.py  forecast_models.py  historical_analysis_models.py  ingestion_models.py  public_forecast_portal.py  surge_alert_models.py  threshold_alert_models.py  user_guide.py  validation_models.py  visualization_models.py  weather_overlay.py  weekly_forecast_models.py
backend/app/pipelines/: surge_alert_evaluation_pipeline.py  threshold_alert_evaluation_pipeline.py
backend/migrations/: env.py
backend/scripts/: fix_stale_surge_runs.py
backend/tests/: conftest.py  evaluation_helpers.py  forecast_accuracy_test_helpers.py
(+837 files in other folders)
